resolve background issue on mobile

--- a/style.css
+++ b/style.css
@@ -3,6 +3,12 @@
     src: url('fonts/PixelifySans-VariableFont_wght.ttf') format('TrueType');
 }
 
+@media screen and (max-width: 749px) {
+    .element-avec-degrade {
+      background-attachment: local !important;
+    }
+  }
+
 body {
     font-family: "Pixel", Arial, sans-serif;
     color: #ffffff;
